# Albuquerque

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json  ML_Project_TestingCode.ipynb  README.md
data/: Config.ini  Config.txt  Credits.txt  Test.txt
data/assets/: AircraftPlaceholder.glb  AircraftPropeller.glb  checkpointRing.glb  collectableSphere.glb
data/levels/: building_collider_layout.gltf  checkpoint_layout.gltf
data/shaders/: Milwaukee.fs.glsl  Milwaukee.vs.glsl  blinnPhong.glsl  draw_indexed.vert.glsl  lines.vert.glsl  main.fs.glsl  main.vs - Copy (2).glsl  main.vs.glsl  phong.frag.glsl  phongFog.frag.glsl  skybox.frag.glsl  skybox.fs.glsl  skybox.vert.glsl  skybox.vs.glsl  triangle.frag.glsl  triangle.vert.glsl  voxel.vs.glsl
data/shaders/FwogRacing/: hello_car.frag.glsl  hello_car.vert.glsl  hello_car_textured.frag.glsl  lines.frag.glsl
data_cargame/models/: CarPlaceholder.glb  Car_BodyOnly.glb  Car_WheelsOnly.glb  ground_placeholder.glb  shrimple_car.glb  test_plane.gltf
data_cargame/shaders/: main.vs - Copy (2).glsl  main.vs - Copy.glsl
data_cargame/shaders/FwogRacing/: hello_car.vert.glsl
lib/: CMakeLists.txt  freetype.lib
lib/SDL2/: Readme.txt
lib/bullet/: Bullet3Common.lib  BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
lib/extra/: CMakeLists.txt
lib/freetype/: source.txt
lib/soloud/: soloud_static.lib
src/Albuquerque/: Application.cpp  CMakeLists.txt  Camera.cpp  DrawObject.cpp  FwogHelpers.cpp
src/Albuquerque.Library/: Application.cpp  CMakeLists.txt
src/Albuquerque/include/Albuquerque/: Application.hpp  Camera.hpp  DrawObject.hpp  FwogHelpers.hpp  Primitives.hpp
src/CarGame/: CMakeLists.txt  CarApplication.cpp  Main.cpp  ProjectApplication.cpp  SceneLoader.cpp
src/CarGame/include/CarGame/: CarApplication.hpp
src/DemoECS/: CMakeLists.txt  main.cpp
src/Griffith/: CMakeLists.txt  main.cpp
src/HelloSDL/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main_load_image.cpp  nuklear_sdl_renderer.h
src/Milwaukee/: CMakeLists.txt  Main.cpp  MilwaukeeApplication.cpp
src/Milwaukee/include/: MilwaukeeApplication.hpp
src/PlaneGame/: CMakeLists.txt  Camera.cpp  ConfigReader.cpp  Main.cpp  ProjectApplication.cpp  SceneLoader.cpp  TestRunner.cpp
src/PlaneGame/include/: Camera.h  ConfigReader.h  ProjectApplication.hpp  TestRunner.h
src/Playground/: CMakeLists.txt  Camera.cpp  Main.cpp  PlaygroundApplication.cpp  ProjectApplication.cpp  SandboxApplication.cpp  Voxel.cpp
src/Playground/include/: Camera.hpp  DrawObject.hpp  PlaygroundApplication.hpp  SandboxApplication.hpp  ViewData.hpp  Voxel.hpp
src/Playground/include/Project/: ProjectApplication.hpp
src/Project/: CMakeLists.txt  Main.cpp  MeshLoading.cpp  ProjectApplication.cpp  SceneLoader.cpp
src/Project.Library/: Application.cpp  CMakeLists.txt
src/Project.Library/include/Project.Library/: Application.hpp
src/Project/common/: common.h
src/Project/include/: MeshLoading.h  ProjectApplication.hpp  SceneLoader.h
src/Project/include/Project/: MeshLoading.hpp  ProjectApplication.hpp
src/Tutorials/: CMakeLists.txt  Main.cpp  ProjectApplication.cpp
src/Tutorials/include/: ProjectApplication.hpp
